# ayg_description

./: .asset_hash  .gitignore  CMakeLists.txt  LICENSE  README.md  ayg.usd  config.yaml  package.xml  setup.cfg  setup.py
ayg_description/: __init__.py  mesh_server.py
config/: config.rviz
configuration/: ayg_physics.usd  ayg_robot.usd  ayg_sensor.usd
launch/: ayg_description_for_studio.launch.py  rviz.launch.py
meshes/: Base.STL  Camera.STL  IMU.STL  LF_Foot.STL  LF_Hip.STL  LF_Shank.STL  LF_Thigh.STL  LH_Foot.STL  LH_Hip.STL  LH_Shank.STL  LH_Thigh.STL  L_Hip.STL  L_Shank.STL  L_Thigh.STL  Neck.STL  RF_Foot.STL  RF_Hip.STL  RF_Shank.STL  RF_Thigh.STL  RH_Foot.STL  RH_Hip.STL  RH_Shank.STL  RH_Thigh.STL  R_Hip.STL  R_Shank.STL  R_Thigh.STL
mujoco/: ayg.xml
scripts/: mesh_server.py
urdf/: ayg.urdf  ayg.xacro  ayg_gazebo.xacro  ayg_sim_ros2_control.xacro  camera.xacro  legs.xacro
