<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ayg_description</name>
    <version>0.0.0</version>
    <description>Ayg description package</description>
    <maintainer email="contact@surenatoyan.com">Suren Atoyan</maintainer>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <author email="contact@surenatoyan.com">Suren Atoyan</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/.."/>
    </export>
</package>
